--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
+    "dist": "http-server dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest",
@@ -28,6 +29,7 @@
     "eslint-plugin-jest": "^27.4.2",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
